# PCKTools

./: .gitmodules  CMakeLists.txt  README.md
msvc/: PCKTools.sln
msvc/pcklib/: pcklib.vcxproj  pcklib.vcxproj.filters
msvc/png2pck/: packages.config  png2pck.vcxproj  png2pck.vcxproj.filters
src/: png2pck.cpp
src/pcklib/: colour.cpp  colour.h  image.cpp  image.h  palette.cpp  palette.h  pck.cpp  pck.h  png.cpp  png.h  tab.cpp  tab.h
